tests/baselines/reference/privateNameWithCodeBeforeSuperCall.errors.txt
tests/cases/conformance/classes/members/privateNames/privateNameWithCodeBeforeSuperCall.ts(4,5): error TS2376: A 'super' call must be the first statement in the constructor when a class contains initialized properties, parameter properties, or downleveled private identifiers.


==== tests/cases/conformance/classes/members/privateNames/privateNameWithCodeBeforeSuperCall.ts (1 errors) ====
    class A {}
    class B extends A {
        #a;
        constructor() {
        ~~~~~~~~~~~~~~~
            void 0;
    ~~~~~~~~~~~~~~~
            super();
    ~~~~~~~~~~~~~~~~
        }
    ~~~~~
!!! error TS2376: A 'super' call must be the first statement in the constructor when a class contains initialized properties, parameter properties, or downleveled private identifiers.
    }
    
    